# Everware

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  index.html  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: deploy.yml
assets/: main.js  style.css
content/: copy.json
docs/superpowers/plans/: 2026-07-14-seo-ai-indexation.md  2026-07-16-single-source-translations.md  2026-07-20-gcp-terraform-hosting.md
docs/superpowers/specs/: 2026-07-14-seo-ai-indexation-design.md  2026-07-15-fastapi-wrap-design.md  2026-07-16-single-source-translations-design.md  2026-07-20-gcp-terraform-hosting-design.md
en/: index.html
infra/: backend.hcl.example  bootstrap.sh  deploy-staging.sh  terraform.tfvars.example
infra/environments/prod/: backend.tf  main.tf  versions.tf
infra/environments/staging/: backend.tf  main.tf  terraform.tfvars
infra/modules/app/: domain.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  secret.tf  variables.tf
infra/shared/: apis.tf  artifact_registry.tf  backend.tf  budget.tf  deploy_sa.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf  wif.tf
public/: index.html  llms.txt  sitemap.xml
public/assets/: main.js  style.css
public/assets/spline/: scene.splinecode  spline-viewer.js
public/en/: index.html
scripts/: build-en.js  extract-copy.js  linkedin-banner.html  logo-icon.html  make-template.js  og-image.html
server/: main.py  render.py
templates/: index.html.j2
tests/: test_pages.py  test_server.py
