[project]
name = "everware-site"
version = "0.1.0"
description = "FastAPI wrapper serving the Everware static site + contact endpoint"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic[email]>=2.7",
    "jinja2>=3.1",
    "markupsafe>=2.1",
    "rcssmin>=1.1",
    "rjsmin>=1.2",
    "minify-html>=0.15",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
